[metadata]
name = cluster-api-janitor-openstack
version = 0.1.0
description = Kubernetes operator that cleans up external resources for Cluster API OpenStack clusters.
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/azimuth-cloud/cluster-api-janitor-openstack
python-requires = ">=3.10"

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    easykube
    httpx
    kopf
    pyyaml
